Require Java 17